# computer-use-evals

./: .gitignore  README.md  pyproject.toml
.claude/plans/: m1-handoff.md  m7-handoff.md  m7-research.md  plan.md  playwright-api-notes.md  research-findings.md  research-handoff.md  research-openai-cu-api.md  research.md
.plans/: m4-handoff.md  plan.md
docs/: decisions.md  init-idea.md  research-consolidated.md
docs/bad-example/: README.md  harness.py  metrics.py  providers.py  pyproject.toml  run_eval.py  strategies.py  types.py
docs/bad-example/mnt/user-data/outputs/gpa-eval/src/gpa_eval/models/: providers.py
docs/resaerch/: chat-1.md  chat-2.md
run_configs/: codex_browser.yaml  desktop_comparison.yaml  deterministic.yaml  openai_browser.yaml  openai_hybrid.yaml  structured_state_desktop.yaml  structured_state_desktop_routed.yaml
scripts/: ax_coverage_probe.py
src/harness/: __init__.py  ax_state.py  capture.py  cli.py  compiler.py  failures.py  graders.py  intent_extract.py  reporting.py  runner.py  runtime_results.py  task_loader.py  types.py
tasks/browser_download/: setup.py  task.yaml
tasks/browser_form_fill/: setup.py  task.yaml
tasks/desktop_calendar_event/: setup.py  task.yaml  verify.py
tests/: test_ax_state.py  test_capture.py  test_cli_compile.py  test_cli_run_config.py  test_codex_adapter.py  test_comparison_report.py  test_compiler.py  test_detailed_report.py  test_deterministic_smoke.py  test_events.py  test_graders.py  test_intent_extract.py  test_macos_env.py  test_milestones.py  test_openai_adapter.py  test_runner_feedback.py  test_runtime_results.py  test_semantic_intents.py  test_stagnation.py  test_structured_state_desktop.py  test_task_loader.py
(+18 files in other folders)
