[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gpa-eval"
version = "0.1.0"
description = "Eval harness for GUI Process Automation — record, replay, and measure"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
browser = ["playwright>=1.48.0"]
all = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "playwright>=1.48.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
